--- a/index.html
+++ b/index.html
@@ -8,6 +8,54 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <section class="header-top">
+            <div class="container">
+                <div class="my-row main-menu-container">
+                    <div class="my-col-1-6">
+                        <img src="img/logo.svg" alt="Discord">
+                    </div>
+                    <div class="my-col-2-3">
+                        <nav>
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        Scarica
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Perché Discord?
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Nitro
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Sicurezza
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Assistenza
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+
+                    <div class="my-col-1-6 login-container">
+                        <a href="#" class="my-button">
+                            Accedi
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
     
 </body>
 </html>
