--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="debug">
     <header>
         <section class="header-top">
             <div class="container">
                 <div class="my-row main-menu-container">
-                    <div class="my-col-1-6">
+                    <div class="my-col-1-6 logo-container">
                         <img src="img/logo.svg" alt="Discord">
                     </div>
-                    <div class="my-col-2-3">
+                    <div class="my-col-2-3 main-nav">
                         <nav>
                             <ul>
                                 <li>
@@ -55,7 +55,42 @@
                 </div>
             </div>
         </section>
+        <section class=" header-bottom">
+            <div class="container-small">
+                <div class="jumbotron">
+                    <h1>
+                        Il tuo posto per parlare
+                    </h1>
+                    <p>
+                        Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
+                    </p>
+                    <div>
+                        <a href="#" class="my-button">
+                            <i class="fa-solid fa-down-long"></i>
+                            Scarica per Mac
+                        </a>
+                        <a href="#" class="my-button">
+                            Apri Discord nel tuo browser
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </header>
+    <main>
+        <section>
+            <div class="container">
+                <div class="my-row main-section-row">
+                    <div class="my-col-3-5">
+                        <img src="img/item1.svg" alt="Item 1">
+                    </div>
+                    <div class="my-col-2-5">
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
