--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="container">
+                <div class="my-row main-section-row">
+                    <div class="my-col-2-5">
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
