--- a/index.html
+++ b/index.html
@@ -84,8 +84,14 @@
                     <div class="my-col-3-5">
                         <img src="img/item1.svg" alt="Item 1">
                     </div>
-                    <div class="my-col-2-5">
-                        
+                    <div class="my-col-2-5 text-container">
+                        <h2>
+                            Un luogo a invito con tutto lo spazio necessario per parlare
+                        </h2>
+
+                        <p>
+                            I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -94,8 +100,16 @@
         <section>
             <div class="container">
                 <div class="my-row main-section-row">
-                    <div class="my-col-2-5">
-                        
+                    <div class="my-col-3-5">
+                        <img src="img/item2.svg" alt="Item 2">
+                    </div>
+                    <div class="my-col-2-5 text-container">
+                        <h2>
+                            Dove trovarsi è facile
+                        </h2>
+                        <p>
+                            Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.
+                        </p>
                     </div>
                 </div>
             </div>
