--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             </div>
         </section>
     </header>
+
     <main>
         <section>
             <div class="container">
@@ -114,7 +115,115 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="container">
+                <div class="my-row main-section-row">
+                    <div class="my-col-3-5">
+                        <img src="img/item3.svg" alt="Item 3">
+                    </div>
+                    <div class="my-col-2-5 text-container">
+                        <h2>
+                            Da pochi a un fandom
+                        </h2>
+                        <p>
+                            Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="main-section-row">
+                    <div class="big-green">
+                        <h2>
+                            Tecnologia affidabile per tenersi in contatto
+                        </h2>
+                        <p>
+                            Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda glia mici giorcare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
+                        </p>
+                        <div class="my-col-3-5">
+                            <img src="img/item4-big.svg" alt="Item 4">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p class="stars-par">
+                Pronto a iniziare la tua avventura?
+            </p>
+            <a href="#" class="my-button-lilac">
+                <i class="fa-solid fa-down-long"></i>
+                Scarica per Mac
+            </a>
+        </section>
     </main>
+
+    <footer>
+        <section class="footer-top">
+            <div class="container">
+                    <div class="my-row footer-top-main-row">
+                        <div class="my-col-1-4">
+                            <h4>
+                                Il tuo posto per parlare
+                            </h4>
+                            <div class="lang-container">
+                                <img src="img/ita.png" alt="ITA">
+                                Italiano
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </div>
+                            <div class="brands-container">
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-instagram"></i>
+                                <i class="fa-brands fa-facebook"></i>
+                                <i class="fa-brands fa-youtube"></i>
+                            </div>
+                        </div>
+                        <div class="my-col-3-4">
+                            <div class="my-row footer-top-secondary-row">
+                                <div class="my-col-1-4">
+                                    <h5>
+                                        Prodotto
+                                    </h5>
+
+                                    <nav>
+                                        <ul>
+                                            <li>
+                                                <a href="#">
+                                                    Scarica
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Perché Discord
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Nitro
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Sicurezza
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Assistenza
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
     
 </body>
 </html>
